Move pipeline to typescript

--- a/package.json
+++ b/package.json
@@ -5,10 +5,19 @@
     "version": "0.1.0",
     "type": "module",
     "license": "MIT",
-    "scripts": {},
+    "scripts": {
+        "build": "tsc -p tsconfig.build.json",
+        "lint": "npx eslint ."
+    },
     "dependencies": {
         "bottleneck": "^2.19.5",
         "capture-website": "^2.3.0",
         "node-fetch": "^3.2.3"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.36.2",
+        "@typescript-eslint/parser": "^5.36.2",
+        "eslint": "^8.23.0",
+        "typescript": "^4.8.2"
     }
 }
