--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -19,13 +19,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v2
         with:
-          node-version: "16"
+          node-version: 16.x
+          cache: "npm"
+          cache-dependency-path: package-lock.json
 
-      - run: npm install
+      - name: Install dependencies
+        run: npm ci
 
-      - run: node screenshot.js
+      - name: Build
+        run: npm run build
+
+      - name: Run my action
+        uses: ./
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
