Better check for github repo

--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm run build
 
       - name: Run
-        run: node src/index.js
+        run: node dist/index.js
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
