--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "type": "module",
     "license": "MIT",
     "scripts": {
-        "build": "tsc -p tsconfig.build.json",
+        "build": "tsc",
+        "test": "jest",
         "lint": "npx eslint ."
     },
     "dependencies": {
@@ -16,9 +17,14 @@
         "node-fetch": "^3.2.3"
     },
     "devDependencies": {
+        "@types/jest": "^29.0.3",
         "@typescript-eslint/eslint-plugin": "^5.36.2",
         "@typescript-eslint/parser": "^5.36.2",
         "eslint": "^8.23.0",
+        "jest": "^29.1.1",
+        "jest-junit": "^14.0.1",
+        "ts-jest": "^29.0.2",
+        "ts-node": "^10.9.1",
         "typescript": "^4.8.2"
     }
 }
