--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -34,6 +34,10 @@ jobs:
       - name: Run
         run: node dist/index.js
 
+      # Use the screenshots.php script to generate the screenshots.json file
+      - name: Screenshots
+        run: php screenshots.php
+
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           branch: ${{ github.head_ref }}
