--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -25,7 +25,7 @@ jobs:
           cache: "npm"
           cache-dependency-path: package-lock.json
 
-      - name: Install dependencies
+      - name: Install Node dependencies
         run: npm ci
 
       - name: Build
@@ -34,9 +34,14 @@ jobs:
       - name: Run
         run: node dist/index.js
 
-      # Use the screenshots.php script to generate the screenshots.json file
-      - name: Screenshots
-        run: php screenshots.php
+      - name: Install PHP dependencies
+        uses: php-actions/composer@v6
+
+      - name: Upload images to CDN and generate JSON file
+        run: make build
+        env:
+          IMAGEKIT_PUBLIC_KEY: ${{ secrets.IMAGEKIT_PUBLIC_KEY }}
+          IMAGEKIT_PRIVATE_KEY: ${{ secrets.IMAGEKIT_PRIVATE_KEY }}
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
