--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Commit new screenshots
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          file_pattern: "screenshots"
+          file_pattern: "screenshots screenshots.json"
           branch: ${{ github.head_ref }}
           commit_message: Commit new screenshots
           commit_user_name: Analysis Tools Bot
