--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -34,21 +34,23 @@ jobs:
       - name: Run
         run: node dist/index.js
 
-      - name: Install PHP dependencies
-        uses: php-actions/composer@v6
+      # This part is temporarily disabled because it's not working.
 
-      - name: Upload images to CDN and generate JSON file
-        run: make build
-        env:
-          IMAGEKIT_PUBLIC_KEY: ${{ secrets.IMAGEKIT_PUBLIC_KEY }}
-          IMAGEKIT_PRIVATE_KEY: ${{ secrets.IMAGEKIT_PRIVATE_KEY }}
+      # - name: Install PHP dependencies
+      #   uses: php-actions/composer@v6
 
-      - name: Commit new screenshots
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          file_pattern: "screenshots screenshots.json"
-          branch: ${{ github.head_ref }}
-          commit_message: Commit new screenshots
-          commit_user_name: Analysis Tools Bot
-          commit_user_email: bot@analysis-tools.dev
-          commit_author: Analysis Tools Bot <bot@analysis-tools.dev>
+      # - name: Upload images to CDN and generate JSON file
+      #   run: make build
+      #   env:
+      #     IMAGEKIT_PUBLIC_KEY: ${{ secrets.IMAGEKIT_PUBLIC_KEY }}
+      #     IMAGEKIT_PRIVATE_KEY: ${{ secrets.IMAGEKIT_PRIVATE_KEY }}
+
+      # - name: Commit new screenshots
+      #   uses: stefanzweifel/git-auto-commit-action@v4
+      #   with:
+      #     file_pattern: "screenshots screenshots.json"
+      #     branch: ${{ github.head_ref }}
+      #     commit_message: Commit new screenshots
+      #     commit_user_name: Analysis Tools Bot
+      #     commit_user_email: bot@analysis-tools.dev
+      #     commit_author: Analysis Tools Bot <bot@analysis-tools.dev>
