--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "scripts": {
         "build": "tsc",
         "test": "jest",
-        "lint": "npx eslint ."
+        "lint": "npx eslint .",
+        "dev": "tsx src/index.ts"
     },
     "dependencies": {
         "bottleneck": "^2.19.5",
         "capture-website": "^2.3.0",
+        "dotenv": "^16.4.5",
         "get-youtube-id": "^1.0.1",
+        "imagekit": "^5.0.0",
         "node-fetch": "^3.2.3"
     },
     "devDependencies": {
@@ -25,6 +28,7 @@
         "jest-junit": "^14.0.1",
         "ts-jest": "^29.0.2",
         "ts-node": "^10.9.1",
+        "tsx": "^4.7.1",
         "typescript": "^4.8.2"
     }
 }
