--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "dotenv": "^16.4.5",
         "get-youtube-id": "^1.0.1",
         "imagekit": "^5.0.0",
-        "node-fetch": "^3.2.3"
+        "node-fetch": "^3.2.3",
+        "tslog": "^4.9.2"
     },
     "devDependencies": {
         "@types/jest": "^29.0.3",
