--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "scripts": {
         "build": "tsc",
         "test": "jest",
-        "lint": "npx eslint ."
+        "lint": "npx eslint .",
+        "dev": "tsx src/index.ts"
     },
     "dependencies": {
         "bottleneck": "^2.19.5",
         "capture-website": "^2.3.0",
+        "dotenv": "^16.4.5",
         "get-youtube-id": "^1.0.1",
-        "node-fetch": "^3.2.3"
+        "imagekit": "^5.0.0",
+        "node-fetch": "^3.2.3",
+        "tslog": "^4.9.2"
     },
     "devDependencies": {
         "@types/jest": "^29.0.3",
@@ -25,6 +29,7 @@
         "jest-junit": "^14.0.1",
         "ts-jest": "^29.0.2",
         "ts-node": "^10.9.1",
+        "tsx": "^4.7.1",
         "typescript": "^4.8.2"
     }
 }
