--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
-    "name": "analysis-tools-dev-screenshots",
-    "private": true,
-    "description": "Create screenshots from analysis tools websites",
-    "version": "0.1.0",
-    "type": "module",
-    "license": "MIT",
-    "scripts": {
-        "build": "tsc",
-        "test": "jest",
-        "lint": "npx eslint .",
-        "dev": "tsx src/index.ts"
-    },
-    "dependencies": {
-        "bottleneck": "^2.19.5",
-        "capture-website": "^4.1.0",
-        "dotenv": "^16.4.5",
-        "get-youtube-id": "^1.0.1",
-        "imagekit": "^5.0.0",
-        "node-fetch": "^3.2.3",
-        "tslog": "^4.9.2"
-    },
-    "devDependencies": {
-        "@types/jest": "^29.0.3",
-        "@typescript-eslint/eslint-plugin": "^5.36.2",
-        "@typescript-eslint/parser": "^5.36.2",
-        "eslint": "^8.23.0",
-        "jest": "^29.1.1",
-        "jest-junit": "^14.0.1",
-        "ts-jest": "^29.0.2",
-        "ts-node": "^10.9.1",
-        "tsx": "^4.7.1",
-        "typescript": "^4.8.2"
-    }
+  "name": "analysis-tools-dev-screenshots",
+  "private": true,
+  "description": "Create screenshots from analysis tools websites",
+  "version": "0.1.0",
+  "type": "module",
+  "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "test": "jest",
+    "lint": "npx eslint .",
+    "dev": "tsx src/index.ts"
+  },
+  "dependencies": {
+    "bottleneck": "^2.19.5",
+    "capture-website": "^4.1.0",
+    "dotenv": "^16.4.5",
+    "get-youtube-id": "^1.0.1",
+    "imagekit": "^5.0.0",
+    "node-fetch": "^3.2.3",
+    "tslog": "^4.9.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "@types/node-fetch": "^2.6.13",
+    "@typescript-eslint/eslint-plugin": "^8.44.0",
+    "@typescript-eslint/parser": "^8.44.0",
+    "eslint": "^9.35.0",
+    "globals": "^16.4.0",
+    "jest": "^30.1.3",
+    "jest-junit": "^14.0.1",
+    "ts-jest": "^29.4.2",
+    "ts-node": "^10.9.1",
+    "tsx": "^4.7.1",
+    "typescript": "^5.9.2"
+  }
 }
