Add --force flag for full screenshot regeneration
- Add --force command line flag to bypass freshness checks
- Update workflow_dispatch with force_update boolean input
- Add logging to indicate when force mode is active
- Automatically use --force flag when workflow is manually triggered with force option

This allows on-demand regeneration of all screenshots, useful for:
- Testing new screenshot configurations (like viewport changes)
- Refreshing all screenshots after major updates
- Manual full updates when needed

--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -13,6 +13,12 @@ on:
     types:
       - rebuild
   workflow_dispatch:
+    inputs:
+      force_update:
+        description: 'Force regenerate all screenshots (ignore freshness checks)'
+        required: false
+        default: false
+        type: boolean
 
 jobs:
   build:
@@ -32,7 +38,12 @@ jobs:
         run: npm install
 
       - name: Upload images to CDN and generate JSON file
-        run: make dev
+        run: |
+          if [ "${{ github.event.inputs.force_update }}" = "true" ]; then
+            npm run dev -- --force
+          else
+            npm run dev
+          fi
         env:
           IMAGEKIT_PUBLIC_KEY: ${{ secrets.IMAGEKIT_PUBLIC_KEY }}
           IMAGEKIT_PRIVATE_KEY: ${{ secrets.IMAGEKIT_PRIVATE_KEY }}
